[package]
name = "foco"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
#spms_ring = {path="../spms_ring"}
spms_ring = { git="https://github.com/tstellanova/spms_ring", branch="trunk" }
generic-array = "0.14.2"
nb = {version="0.1.2"}
array-macro = "1.0.5"
